--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Навигация -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">НЛК</a>
+        <a class="navbar-brand " href="#">НЛК</a>
         <button class="navbar-toggler me-3" 
                 type="button" 
                 data-bs-toggle="collapse" 
@@ -60,7 +60,7 @@
             добавлять свои научные работы, получать информацию об их уникальности 
             и смотреть отзывы ваших научных руководителей.
           </p>
-          <button type="button" class="btn btn-primary btn-lg my-custom-btn">
+          <button type="button" class="btn btn-primary btn-lg my-custom-btn btn_portfolio">
             
             Добавить работу
           </button>
@@ -68,6 +68,128 @@
       </div>
     </div>
 
+
+    <!-- px-3 px-md-4 px-lg-5 mt-5 -->
+    <div class="container-fluid2 px-3 px-md-4 px-lg-5 mt-5">
+        <div class="row">
+          <!-- Карточка профиля -->
+          <div class="col-md-6 col-lg-4 mb-4">
+            <div class="card border-secondary ">
+              <div class="card-header">Ваш профиль</div>
+              <div class="card-body text-secondary">
+                <p class="card-title">Сергей Павлович Фролов</p>
+                <p class="card-text"><strong>Научная степень:</strong> Магистр.<br>
+                  <strong>Специализация:</strong> Инвестиционные проблемы экономически развивающихся рынков.</p>
+                <button type="button" class="btn btn-primary btn_profile">Редактировать</button>
+              </div>
+            </div>
+          </div>
+          
+          <!-- Карточка статистики -->
+          <div class="col-md-6 col-lg-4 mb-4">
+            <div class="card border-secondary ">
+              <div class="card-header">Статистика</div>
+              <div class="card-body text-secondary">
+                <p class="card-text"><strong>На платформе:</strong> 2 года.<br>
+                  <strong>Добавлено работ:</strong> 10.<br>
+                  <strong>Средняя уникальность:</strong> 75%.<br>
+                  <strong>Языки работ:</strong> русский, английский.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="content_table px-3 px-md-4 px-lg-5 mt-5 mb-5">
+        <div class="table-responsive">
+      <table class="table table-bordered">
+        <thead>
+            <tr>
+              <th scope="col">Название работы</th>
+              <th scope="col">Дата загрузки</th>
+              <th scope="col">Научный руководитель</th>
+              <th scope="col">Уникальность</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><a href="#">Привлечение инвестиций как фактор развития экономики</a></td>
+              <td>21.05.2019</td>
+              <td><a href="#">Асаншоева А.М.</a></td>
+              <td><a href="#">89%</a></td>
+            </tr>
+            <tr>
+                <td><a href="#">The role of accounting in sustainable development</a></td>
+                <td>11.02.2019</td>
+                <td><a href="#">Шаляпина В.С.</a></td>
+                <td><a href="#">78%</a></td>
+              </tr>
+              <tr>
+                <td><a href="#">Сценарный анализ как инструмент учета рисков инвестиционного
+                    проекта</a></td>
+                <td>05.09.2018</td>
+                <td><a href="#">Васильев М.Г.</a></td>
+                <td><a href="#">67%</a></td>
+              </tr>
+              <tr>
+                <td><a href="#">Глобальные и региональные инвестиционные тенденции</a></td>
+                <td>09.07.2018</td>
+                <td><a href="#">Асаншоева А.М.</a></td>
+                <td><a href="#">73%</a></td>
+              </tr>
+
+              <tr>
+                <td><a href="#">Systemic risks in financial markets</a></td>
+                <td>18.05.2018</td>
+                <td><a href="#">Леонидов В.Б.</a></td>
+                <td><a href="#">77%</a></td>
+              </tr>
+
+              <tr>
+                <td><a href="#">The influence of tax regulation liberalisation on the domestic debt market</a></td>
+                <td>09.03.2018</td>
+                <td><a href="#">Шаляпина В.С.</a></td>
+                <td><a href="#">82%</a></td>
+              </tr>
+
+
+              <tr>
+                <td><a href="#">Биткоин как новый вид инвестиций</a></td>
+                <td>29.01.2018</td>
+                <td><a href="#">Асаншоева А.М.</a></td>
+                <td><a href="#">71%</a></td>
+              </tr>
+
+              <tr>
+                <td><a href="#">Проблема воспроизводства жилищного фонда в России</a></td>
+                <td>08.11.2017</td>
+                <td><a href="#">Васильев М.Г.</a></td>
+                <td><a href="#">65%</a></td>
+              </tr>
+
+              <tr>
+                <td><a href="#">Влияние безработицы на экономику СНГ</a></td>
+                <td>17.09.2017</td>
+                <td><a href="#">Васильев М.Г.</a></td>
+                <td><a href="#">68%</a></td>
+              </tr>
+
+              <tr>
+                <td><a href="#">Мировой валютный рынок Форекс</a></td>
+                <td>02.07.2017</td>
+                <td><a href="#">Васильев М.Г.</a></td>
+                <td><a href="#">67%</a></td>
+              </tr>
+          </tbody>
+      </table>
+        </div>
+    </div>
+
+    <footer>
+        <div class="footer-content">
+            <p class="text-footer ps-3 px-md-4 px-lg-5 py-3">© Научный личный кабинет. Все права защищены</p>
+        </div>
+    </footer>
     <!-- Скрипты Bootstrap -->
     <script 
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
